[package]
name = "bevy_mask_system"
version = "0.1.0"
edition = "2021"

description = "A library for system architecture that utilizes functional programming principles to organize code. It primarily uses mask-based generics to structure systems."
license = "MIT"
repository = "https://github.com/unco999/bevy_mask_system"
homepage = "https://your_homepage.com"
keywords = ["fp" ,"generics", "masking","bevy"]
categories = ["game-development"]

[dependencies]
mask_system_lib = { path = "mask_system_lib", version="0.1.0" }
syn = { version = "1.0", features = ["derive"] }
quote = "1.0"
typenum = "1.15"
# bevy = "0.14.1"

# [[bin]]
# name = "example"
# path = "example/src/main.rs" 

[lib]
proc-macro = true
