[package]
name = "mask_system_lib"
version = "0.1.0"
edition = "2021"

description = "(bevy_mask_system)A library for system architecture that utilizes functional programming principles to organize code. It primarily uses mask-based generics to structure systems."
license = "MIT"
repository = "https://github.com/unco999/bevy_mask_system"
homepage = "https://your_homepage.com"
keywords = ["functional programming", "generics", "masking"]
categories = ["Architecture", "Programming"]

[dependencies]
typenum = "1.15"
